--- a/xrStalker/w_ak74u.ltx
+++ b/xrStalker/w_ak74u.ltx
@@ -20,7 +20,7 @@ ammo_mag_size			= 30				; clip (magazine) size
 
 ammo_class				= ammo_5.45x39_fmj, ammo_5.45x39_ap ; name of the ltx-section of used ammo 
 
-hand_dependence			= 2									; how many hands (1 or 2) we used to hold weapon in
+hand_dependence			= 1									; how many hands (1 or 2) we used to hold weapon in
 	
 slot 					= 2									; number of slot in inventory we put weapon in (1 - knife slot, 2 - pistol, 3 - rifle, 4 - grenade, 5 - apparatus)
 animation_slot			= 2									; type of the animation that will be used
@@ -68,14 +68,14 @@ misfire_probability 		= 0.0001	;вероятность осечки при максимальном износе
 condition_shot_dec 			= 0.00003	;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
-fire_point             		=  0.0, 0.22, 0.65			; position (3rd person view) for particles of fire 
-fire_point2            		=  0.0, 0.2, 0.72			; position (3rd person view) for particles of fire (when shooting with secondary fire)
+fire_point             		=  0.0, 0.262, 0.447		; position (3rd person view) for particles of fire 
+fire_point2            		=  0.0, 0.262, 0.547		; position (3rd person view) for particles of fire (when shooting with secondary fire)
 
 flame_particles				= weapons\generic_weapon05	; particles for shooting effects
 smoke_particles				= weapons\generic_shoot_00
 grenade_flame_particles		= weapons\generic_weapon01
 	
-shell_point		 			= 0.05, 0.22, 0.06			; position (3rd person view) for shell to throw out
+shell_point		 			= 0.00, 0.262, 0.189			; position (3rd person view) for shell to throw out
 shell_particles	 			= weapons\generic_shells	; name of the particles for shells
 
 ; ttc
@@ -92,8 +92,8 @@ rpm                      	= 600						; max round per minute
 hud                      	= wpn_ak74u_hud				; name of the section of the hud
 
 ;----------------------------------------------------------
-position         	        = -0.03, -0.13, 0.1			; position (offset) and orientation of the weapon in the hands of character
-orientation      	        = -5.0, -9, -5				; (3rd person view)
+position         	        = -0.026,-0.215,0			; position (offset) and orientation of the weapon in the hands of character
+orientation      	        = 0,0,0						; (3rd person view)
 
 ;----------------------------------------------------------
 visual         		        = weapons\ak-74u\ak74u.ogf		; name of the model for 3rd person view
