--- a/xr_3da/xrGame/monsters.ltx
+++ b/xr_3da/xrGame/monsters.ltx
@@ -11,5 +11,6 @@
 #include "m_zombie.ltx"
 #include "m_fracture.ltx"
 #include "m_snork.ltx"
+#include "m_cat.ltx"
 #include "M_Rat.ltx"
 #include "m_crow.ltx"
