--- a/xrStalker/w_lr300.ltx
+++ b/xrStalker/w_lr300.ltx
@@ -1,40 +1,40 @@
 [wpn_lr300]
 GroupControlSection	= spawn_group
 discovery_dependency = 
-$spawn                   = "weapons\lr-300"					; option for Level Editor
-$npc			 = on				; option for Level Editor
-$prefetch 		 = 8
-scheduled                = off              ; option for ALife Simulator
-cform                    = skeleton
-class                    = W_LR300
-min_radius               = 0
-max_radius               = 50
+$spawn                   	= "weapons\lr-300"					; option for Level Editor
+$npc			 			= on				; option for Level Editor
+$prefetch 		 			= 8
+scheduled                	= off              ; option for ALife Simulator
+cform                    	= skeleton
+class                    	= W_LR300
+min_radius               	= 0
+max_radius               	= 50
 
-cost					 = 400	;2300
-weapon_class			 = assault_rifle
+cost					 	= 400
+weapon_class			 	= assault_rifle
 
-ammo_limit		 = 210
-ammo_current		 = 30
-ammo_elapsed		 = 30
+ammo_limit		 			= 210
+ammo_current		 		= 30
+ammo_elapsed		 		= 30
 
-ammo_mag_size		 = 30
-ammo_class		 = ammo_5.56x45_ss190, ammo_5.56x45_ap
+ammo_mag_size		 		= 30
+ammo_class		 			= ammo_5.56x45_ss190, ammo_5.56x45_ap
 
-hand_dependence		 = 2
+hand_dependence		 		= 1
 
-inv_name		= LR300
-inv_name_short		= LR300
-inv_weight		= 3.5
+inv_name					= LR300
+inv_name_short				= LR300
+inv_weight					= 3.5
 
-inv_grid_width		= 5
-inv_grid_height		= 2
-inv_grid_x			= 0
-inv_grid_y			= 6
+inv_grid_width				= 5
+inv_grid_height				= 2
+inv_grid_x					= 0
+inv_grid_y					= 6
 
-immunities_sect		= weapon
+immunities_sect				= weapon
 
-slot 			 = 2		; // secondary
-animation_slot			= 2		; type of the animation that will be used
+slot 			 			= 2		; // secondary
+animation_slot				= 2		; type of the animation that will be used
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
@@ -57,47 +57,47 @@ misfire_probability 		= 0.0001	;вероятность осечки при максимальном износе
 condition_shot_dec 			= 0.00003	;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
-direction                = 0, 0, 1
+direction                	= 0, 0, 1
 
-fire_point               = 0.0, 0.2, 0.65
+fire_point               	= 0.0, 0.199, 0.575
 
-flame_particles			= weapons\generic_weapon05
-smoke_particles         = weapons\generic_shoot_00
+flame_particles				= weapons\generic_weapon05
+smoke_particles         	= weapons\generic_shoot_00
 
-shell_point		 = 0.05, 0.16, 0.06
-shell_dir		 = 0.0, 1.0, 0.0
-shell_particles	 = weapons\generic_shells
+shell_point		 			= 0.0, 0.199, 0.09
+shell_dir		 			= 0.0, 1.0, 0.0
+shell_particles	 			= weapons\generic_shells
 
-rpm_empty_click 	 = 200
+rpm_empty_click 	 		= 200
 ; ttc
 
-hit_power        = 40
-hit_impulse		 = 140
-hit_type = fire_wound
+hit_power        			= 40
+hit_impulse		 			= 140
+hit_type 					= fire_wound
 
-fire_distance            = 400
-bullet_speed			 = 750			;начальная скорость пули
-rpm                      = 650
-; end ttc
-hud                      = wpn_lr300_hud
-normal                   = 0, 1, 0
-position                 = -0.03, -0.09, 0.09
-orientation              = 0.0, -17.0, 0.5
-startup_ammo             = 1000
-visual                   = weapons\lr300\wpn_lr300.ogf
+fire_distance            	= 400
+bullet_speed			 	= 750			;начальная скорость пули
+rpm                      	= 650
+; end ttc	
+hud                      	= wpn_lr300_hud
+normal                   	= 0, 1, 0
+position                 	= -0.026, -0.130, 0.0
+orientation              	= 0.0, 0.0, 0.0
+startup_ammo             	= 1000
+visual                   	= weapons\lr300\wpn_lr300.ogf
 
-tracer_head_speed	 = 400
-tracer_trail_scale	 = 0.75
-tracer_start_length	 = 1
-tracer_width		 = 0.07
-light_color		 = 0.6,0.5,0.3
-light_range		 = 5
-light_var_color		 = 0.05
-light_var_range		 = 0.1
-light_time 		 = 0.2
+tracer_head_speed	 		= 400
+tracer_trail_scale	 		= 0.75
+tracer_start_length	 		= 1
+tracer_width		 		= 0.07
+light_color		 			= 0.6,0.5,0.3
+light_range		 			= 5
+light_var_color		 		= 0.05
+light_var_range		 		= 0.1
+light_time 		 			= 0.2
 
-ph_mass			 = 3
-;cost			 = 2500
+ph_mass			 			= 3
+;cost			 			= 2500
 
 ;addons
 scope_status				= 0
@@ -105,7 +105,7 @@ silencer_status				= 0
 grenade_launcher_status		= 0
 
 zoom_enabled				= true
-scope_zoom_factor	    = 50	;30
+scope_zoom_factor	    	= 50
 
 ;звуки
 snd_draw			= weapons\generic_draw
@@ -117,21 +117,21 @@ snd_reload			= weapons\val_reload, 0.7, 0.4
 
 [wpn_lr300_hud]
 
-shell_point          = 0.05, -0.03, 0.05
-shell_dir		 = 0.0, 1.0, 0.0
+shell_point          		= 0.05, -0.03, 0.05
+shell_dir		 			= 0.0, 1.0, 0.0
 
-fire_point               = 0.270000,-0.010000,0.100000
-fire_bone                = wpn_body
-orientation              = 0, 0, 0
-position                 = 0, 0, 0
-visual                   = weapons\lr300\wpn_lr300_hud.ogf
+fire_point       	        = 0.270000,-0.010000,0.100000
+fire_bone        	        = wpn_body
+orientation      	        = 0, 0, 0
+position         	        = 0, 0, 0
+visual           	        = weapons\lr300\wpn_lr300_hud.ogf
 
-anim_idle		= idle
-anim_idle_aim	= idle_aim
-anim_reload		= reload
-anim_draw		= draw
-anim_holster	= holster
-anim_shoot		= shoot
+anim_idle			= idle
+anim_idle_aim		= idle_aim
+anim_reload			= reload
+anim_draw			= draw
+anim_holster		= holster
+anim_shoot			= shoot
 
 ;смещения HUD для режима приближения
 zoom_offset			= -0.157000,-0.020400,0.000000
