--- a/xrStalker/System.ltx
+++ b/xrStalker/System.ltx
@@ -925,7 +925,8 @@ script_binding	= stalker.script_zone_init
     start_time				= 16:30:00
     start_date				= 01.08.2015
     surge_interval			= 96											; in hours (96 hours == 4 days)
-    autosave_interval		= 00:01:00
+    autosave_interval		= 00:03:00
+    delay_autosave_interval	= 00:01:00
 
 [script_object]
 GroupControlSection			= spawn_group
