--- a/xr_3da/xrGame/environment.ltx
+++ b/xr_3da/xrGame/environment.ltx
@@ -189,12 +189,12 @@ sun_dir			=	-40.0, 60.0
 12:00:00		=	default_a_02
 
 [default_a_01]
-flares			=	flares_moon	
-sky_texture		=	sky\sky_14_cube
+flares			=   flares_sun_rise
+sky_texture		=	sky\sky_17_cube
 sky_rotation	=	0
-sky_color		=	0.3,	0.3,	0.3
-far_plane		=	200
-fog_color		=	0.043, 0.043, 0.055
+sky_color		=	1.0,    1.0,  	1.0
+far_plane		=	450
+fog_color		=	0.333, 0.341, 0.431
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -203,19 +203,19 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.043, 0.043, 0.055
+ambient			=	0.07,   0.07,  	0.07
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=	0.2,	0.2,	0.2, 0.1
-sun_color		=   0.043, 0.043, 0.055
-sun_dir			=	-31.0, 296
+hemi_color		=   0.75, 0.75, 0.75, 0.5
+sun_color		=	1.000, 0.384, 0.196
+sun_dir			=	-18.0, 291
 
 [default_a_02]
-flares			=	flares_moon	
-sky_texture		=	sky\sky_14_cube
+flares			=   flares_sun_rise
+sky_texture		=	sky\sky_17_cube
 sky_rotation	=	0
-sky_color		=	0.3,	0.3,	0.3
-far_plane		=	200
-fog_color		=	0.043, 0.043, 0.055
+sky_color		=	1.0,    1.0,  	1.0
+far_plane		=	450
+fog_color		=	0.333, 0.341, 0.431
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -224,11 +224,11 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.043, 0.043, 0.055
+ambient			=	0.07,   0.07,  	0.07
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=	0.2,	0.2,	0.2, 0.1
-sun_color		=	0.043, 0.043, 0.055
-sun_dir			=	-31.0, 296
+hemi_color		=   0.75, 0.75, 0.75, 0.5
+sun_color		=	1.000, 0.384, 0.196
+sun_dir			=	-18.0, 291
 
 
 [sect_vibros]
@@ -383,10 +383,31 @@ bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
 ambient			=	0.043, 0.043, 0.055
-lmap_color		=	0.2,	0.2,	0.2;0.2,	0.2,	0.2
-hemi_color		=	0.0,    0.0,  	0.0
-sun_color		=	0.1,	0.1,	0.1;0.2,	0.2,	0.2
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=	0.2,	0.2,	0.2, 0.1
+sun_color		=   0.1, 0.1, 0.1
 sun_dir			=	-31.0, 296
+
+;dx9
+;flares			=	flares_moon	
+;sky_texture		=	sky\sky_14_cube
+;sky_rotation	=	0
+;sky_color		=	0.3,	0.3,	0.3
+;far_plane		=	200
+;fog_color		=	0.043, 0.043, 0.055
+;fog_density		=	0.9
+;rain_density	=	0.0
+;rain_color		=	1.0,	1.0,	1.0
+;thunderbolt		= 	off
+;bolt_period		=	3.f
+;bolt_duration	=	0.25f
+;wind_velocity	=	0.0 
+;wind_direction	=	0.0
+;ambient			=	0.043, 0.043, 0.055
+;lmap_color		=	1.0,	1.0,	1.0
+;hemi_color		=	0.2,	0.2,	0.2, 0.1
+;sun_color		=   0.043, 0.043, 0.055
+;sun_dir			=	-31.0, 296
 
 
 
