--- a/xr_3da/xrGame/w_fn2000.ltx
+++ b/xr_3da/xrGame/w_fn2000.ltx
@@ -10,7 +10,7 @@ class                    = W_FN2000
 min_radius               = 50
 max_radius               = 150
 
-cost					 = 1500	;3500
+cost					 = 1500
 weapon_class			 = assault_rifle
 
 ammo_limit		         = 180
@@ -19,7 +19,7 @@ ammo_elapsed		     = 30
 
 ammo_mag_size		     = 30
 
-hand_dependence		     = 2
+hand_dependence		     = 1
 ammo_class		         = ammo_5.56x45_ss190, ammo_5.56x45_ap
 
 slot 			         = 2		; // secondary
@@ -27,12 +27,12 @@ animation_slot			 = 2		; type of the animation that will be used
 
 inv_name		         = FN2000
 inv_name_short		     = FN2000
-inv_weight		         = 5	;2
+inv_weight		         = 5
 
-inv_grid_width		= 4
-inv_grid_height		= 2
-inv_grid_x			= 5
-inv_grid_y			= 9
+inv_grid_width			= 4
+inv_grid_height			= 2
+inv_grid_x				= 5
+inv_grid_y				= 9
 
 
 immunities_sect			= weapon
@@ -45,12 +45,8 @@ fire_dispersion_base		= 0.03 	;угол (в градусах) базовой дисперсии оружия (оружи
 cam_relax_speed         	= 5.0	;скорость возврата в исходное положение
 cam_dispersion          	= 0.7	;увеличения угла (в градусах) с каждым выстрелом
 cam_max_angle				= 6		;максимальный угол отдачи
-cam_max_angle_horz	= 5.0	;(degree) maximum shot horizontal degree 
-cam_step_angle_horz	= 0.5	;(degree) size of step camera moved in horizontal position while shooting
-
-;;;destroy it
-cam_horz_prob = 1			;probability of the horizontal deviation of effector while shooting (1 – always deviates)
-cam_horz_factor = 1.5		; empirically determined coefficient  of the horizontal deviation (if raises – dispersal raises) 
+cam_max_angle_horz			= 5.0	;(degree) maximum shot horizontal degree 
+cam_step_angle_horz			= 0.5	;(degree) size of step camera moved in horizontal position while shooting
 
 
 fire_dispersion_condition_factor = 5	;увеличение дисперсии в процентах при максимальном износе 
@@ -60,14 +56,14 @@ condition_shot_dec 			= 0.00003	;увеличение износа при каждом выстреле
 
 direction                = 0, 0, 1
 
-fire_point               = 0.0, 0.15, 0.4
+fire_point               = 0.0, 0.216, 0.365
 
 flame_particles			 = weapons\generic_weapon05
 smoke_particles			 = weapons\generic_shoot_00
 
-shell_point		 = 0.05, 0.0, 0.05
-shell_dir		 = 0.0, 1.0, 0.0
-shell_particles	 = weapons\generic_shells
+shell_point		 		= 0.0, 0.216, 0.0
+shell_dir		 		= 0.0, 1.0, 0.0
+shell_particles	 		= weapons\generic_shells
 
 
 rpm_empty_click 	     = 200
@@ -84,8 +80,8 @@ rpm                      = 850
 
 hud                      = wpn_fn2000_hud
 normal                   = 0, 1, 0
-position                 = -0.03, -0.09, 0.11
-orientation              = -0.0, -6.7, -5
+position                 = -0.026, -0.132, 0.0
+orientation              = 0, 0, 0
 startup_ammo             = 1000
 visual                   = weapons\fn2000\wpn_fn2000.ogf
 
@@ -126,8 +122,8 @@ snd_reload_grenade	= weapons\gen_grenload
 
 
 [wpn_fn2000_hud]
-shell_point          = 00.00, -0.03, 0.05
-shell_dir		 = 0.0, 1.0, 0.0
+shell_point          	= 00.00, -0.03, 0.05
+shell_dir		 		= 0.0, 1.0, 0.0
 
 fire_point               = -0.050000,-0.090000,0.020000
 fire_bone                = rifle
@@ -135,12 +131,12 @@ orientation              = 0, 0, 0
 position                 = 0, 0, 0
 visual                   = weapons\fn2000\wpn_fn2000_hud.ogf
 
-anim_idle = idle
-anim_idle_aim = idle
-anim_reload = reload
-anim_draw = draw
-anim_holster = holster
-anim_shoot = shoot
+anim_idle 		= idle
+anim_idle_aim 	= idle
+anim_reload 	= reload
+anim_draw 		= draw
+anim_holster 	= holster
+anim_shoot 		= shoot
 
 ;смещения HUD для режима приближения
 zoom_offset			= -0.030000,-0.010000,-0.050000
